--- a/templates/result.html
+++ b/templates/result.html
@@ -6,6 +6,6 @@
 <body>
     <h1>Prediction Result</h1>
     <p><b>Predicted Character:</b> {{ label }}</p>
-    <img src="/static/uploads/{{ filename }}" width="200">
+    <img src="{{ url_for('display_image', filename=filename) }}" width="200">
 </body>
 </html>
